snapshot-tests/tests/snapshots/valid__tables__array_span-2.snap
---
source: snapshot-tests/tests/valid.rs
expression: spans
---
note[bool]: root_array_0_members
  ┌─ array_span:3:11
  │
3 │ members = true
  │           ^^^^

note[bool]: root_array_0_other
  ┌─ array_span:4:9
  │
4 │ other = false
  │         ^^^^^

note[table]: root_array_0
  ┌─ array_span:2:1
  │
2 │ ╭ [[array]]
3 │ │ members = true
4 │ │ other = false
  │ ╰─────────────^

note[bool]: root_array_1_members
  ┌─ array_span:6:11
  │
6 │ members = false
  │           ^^^^^

note[table]: root_array_1
  ┌─ array_span:5:1
  │
5 │ ╭ [[array]]
6 │ │ members = false
  │ ╰───────────────^

note[array]: root_array
  ┌─ array_span:2:1
  │
2 │ ╭ [[array]]
3 │ │ members = true
4 │ │ other = false
  │ ╰─────────────^

note[table]: root
  ┌─ array_span:1:1
  │
1 │ ╭
2 │ │ [[array]]
3 │ │ members = true
4 │ │ other = false
  · │
7 │ │
8 │ │
  │ ╰^
