snapshot-tests/tests/snapshots/valid__tables__array_span.snap
---
source: snapshot-tests/tests/valid.rs
expression: valid_toml
---
{
  "array": [
    {
      "members": true,
      "other": false
    },
    {
      "members": false
    }
  ]
}
