snapshot-tests/tests/snapshots/valid__tables__implicit_and_explicit_after.snap
---
source: snapshot-tests/tests/valid.rs
expression: valid_toml
---
{
  "a": {
    "b": {
      "c": {
        "answer": 42
      }
    },
    "better": 43
  }
}
