snapshot-tests/tests/snapshots/valid__tables__implicit_array.snap
---
source: snapshot-tests/tests/valid.rs
expression: valid_toml
---
{
  "albums": {
    "songs": [
      {
        "name": "Glory Days"
      }
    ]
  }
}
