snapshot-tests/tests/snapshots/valid__tables__sub_empty-2.snap
---
source: snapshot-tests/tests/valid.rs
expression: spans
---
note[table]: root_a_b
  ┌─ sub_empty:2:1
  │
2 │ [a.b]
  │ ^^^^^

note[table]: root_a
  ┌─ sub_empty:1:1
  │  
1 │ ╭ [a]
2 │ │ [a.b]
  │ ╰^

note[table]: root
  ┌─ sub_empty:1:1
  │  
1 │ ╭ [a]
2 │ │ [a.b]
  │ ╰─────^
